2003-12-05  Robert Varga <frozenfingers@xs4all.nl>

	* conglomerate.keys.in, coglomerate.mime
	Added text/x-xsl mime type and application binding.

2003-11-23  Robert Varga <frozenfingers@xs4all.nl>

	* conglomerate.keys.in, conglomerate.mime, conglomerate.applications, Makefile.am
	fix for bug 108400: desktop integration

2003-10-28  Jeff Martin

	* conglomerate.schema
	path of templates

2003-10-27  Geert Stappers <stappers@stappers.nl>

	* ChangeLog:
	Created this file.

	* catalog & catalog.xml
	Files that Steinar Bang provided in bugzilla#122011.